manifests/home-assistant/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: automation
