manifests/home-assistant/03-home-assistant-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: automation
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8123
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: home-assistant
